# Servant-Xbot

./: .gitignore  README.md  amazon.py  best_sellers_getter.py  crud.py  fetch_errors.txt  fetch_itens.py  funcs.py  main.py  pyproject.toml  requirements.txt  send_itens.py
config/: settings.py
data/: bestseller_topics.txt
scripts/: get_bestsellers.py  import_products.py  update_products.py
src/: best_sellers_getter.py  crud.py  fetch_itens.py  send_itens.py
src/servant_xbot/amazon/: affiliate.py  auth.py  scraper.py
src/servant_xbot/database/: firebase.py
src/servant_xbot/models/: product.py
src/servant_xbot/utils/: helpers.py
utils/: fetch_errors.txt
